# B-CPP-500-MAR-5-1-rtype-thibaut.tran

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  Makefile  README.md  RFC-TCP.md  a.out  conanfile.txt  install.sh  jhjhjf.json  r-type_client  r-type_server  run.sh  test_client  test_hein  test_serv  testmain.cpp  testserv.hpp  udpClient.cpp  udpTest.cpp
.github/workflows/: cmake-single-platform.yml  sync.yml
Client/: Client.cpp  Client.hpp
Client/Connection/: Connection.cpp  Connection.hpp  Connexion.cpp  Connexion.hpp
GameEngine/: GameEngine.cpp  GameEngine.hpp  Makefile  myEngine  tree.txt
GameEngine/Components/: AComponent.hpp  AI.hpp  Health.hpp  Position.hpp  Render.hpp  Strenght.hpp  test.cpp
GameEngine/Components/AComponent/: AComponent.hpp
GameEngine/Components/AI/: AI.hpp
GameEngine/Components/Bool/: Bool.hpp
GameEngine/Components/ButtonText/: ButtonText.hpp
GameEngine/Components/Camera/: Camera.hpp
GameEngine/Components/Cooldown/: Cooldown.hpp
GameEngine/Components/Damage/: Damage.hpp
GameEngine/Components/Direction/: Direction.hpp
GameEngine/Components/Draggable/: Draggable.hpp
GameEngine/Components/Event/: Event.hpp
GameEngine/Components/Health/: Health.hpp
GameEngine/Components/HitBoxCircle/: HitBoxCircle.hpp
GameEngine/Components/HitBoxSquare/: HitBoxSquare.hpp  HitboxSquare.hpp
GameEngine/Components/Hitbox/: Hitbox.hpp
GameEngine/Components/Menu/: Menu.hpp
GameEngine/Components/Path/: Path.hpp
GameEngine/Components/Position/: Position.hpp
GameEngine/Components/RectangleShape/: RectangleShape.hpp
GameEngine/Components/Render/: Render.hpp
GameEngine/Components/Score/: Score.hpp
GameEngine/Components/Shield/: Shield.hpp
GameEngine/Components/Sound/: Sound.hpp
GameEngine/Components/Sprite/: Sprite.hpp
GameEngine/Components/Strenght/: Strenght.hpp
GameEngine/Components/String/: String.hpp
GameEngine/Components/TimeComp/: TimeComp.hpp
GameEngine/Components/Velocity/: Velocity.hpp
GameEngine/Components/Weapon/: Weapon.hpp
GameEngine/Components/Window/: Window.hpp
GameEngine/Entity/: Entity.hpp  EntityManager.hpp
GameEngine/Entity/EntityManager/: EntityManager.hpp
GameEngine/Interfaces/: IComponent.hpp  ISystem.hpp
GameEngine/Interfaces/IComponent/: IComponent.hpp
GameEngine/Interfaces/ISystem/: ISystem.hpp
GameEngine/Systems/: ASystem.hpp  SysAI.hpp
GameEngine/Systems/ASystem/: ASystem.hpp
GameEngine/Systems/SysAI/: SysAI.cpp  SysAI.hpp
GameEngine/Systems/SysAIPong/: SysAIPong.hpp
GameEngine/Systems/SysCamera/: SysCamera.hpp  SysCameraEditor.hpp
GameEngine/Systems/SysClear/: SysClear.hpp
GameEngine/Systems/SysClearClient/: SysClearClient.hpp
GameEngine/Systems/SysCollision/: SysCollision.hpp
GameEngine/Systems/SysCollisionPong/: SysCollisionPong.hpp
GameEngine/Systems/SysMoveBallPong/: SysMoveBallPong.hpp
GameEngine/Systems/SysMovement/: SysMovement.hpp
GameEngine/Systems/SysPollEvent/: SysPollEvent.hpp
GameEngine/Systems/SysRender/: SysRender.hpp  SysRenderGlobal.hpp
GameEngine/Systems/SysShoot/: SysShoot.hpp
GameEngine/Systems/SysWeapon/: SysWeapon.hpp
GameEngine/Utils/: Timeout.hpp  Utils.hpp
Server/: Server.cpp  Server.hpp
Server/Socket/: ASocket.hpp  ISocket.hpp
Server/Socket/TCP/: TCPSocket.cpp  TCPSocket.hpp
Server/Socket/UDP/: UDPSocket.cpp
Utils/Compressor/: Compress.hpp
Utils/Thread/: func.h
assets/maps/: map1.json  map2.json
bonus/: CMakeCache.txt  Makefile  cmake_install.cmake
bonus/ConanLibs/: CMakePresets.json  conanbuild.sh  conanbuildenv-release-x86_64.sh  conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh
bonus/Pong/: CMakeLists.txt  CMakeUserPresets.json  install.sh
bonus/Pong/client/: client.cpp  client.hpp
bonus/Pong/client/graphical/: game.cpp
bonus/Pong/client/include/: game.hpp
client/: Client.hpp  client.cpp  client.hpp  main.cpp
client/editor/: Editor.cpp  Editor.hpp
client/graphical/: anim.cpp  connexion.cpp  create_room.cpp  game.cpp  init.cpp  menu.cpp  room.cpp
client/graphical/menu/: anim.cpp  handle_tcp_events.cpp  init.cpp  tcp_func.cpp
client/graphical/utils/: sfml_func.cpp  sfml_func.hpp
client/include/: AGame.hpp  IGame.hpp  game.hpp  menu.hpp  player.hpp
client/network/ConnectionTCP/: ConnectionTCP.cpp  ConnectionTCP.hpp
client/network/OpenUDP/: OpenUDP.cpp  OpenUDP.hpp
libs/SFML/: Makefile  SFMLSharedTargets.cmake  cmake_install.cmake
libs/SFML/src/SFML/: Makefile  (+1 more)
libs/boost/: CMakeLists.txt
maps/: 1.r-type  map1.json
server/: LaunchServer.cpp  Server.cpp  Server.hpp  compile_server.sh  r-type-server  r-type_server
server/Elements/Map/: Map.cpp  Map.hpp
server/Elements/Player/: Player.hpp  PlayerLobby.cpp  PlayerLobby.hpp
server/Elements/Position/: Position.hpp
server/Room/: Room.cpp  Room.hpp  RoomLobby.cpp  RoomLobby.hpp
server/Room/Thread/: Thread.cpp  Thread.hpp
server/Save/: HandleSave.cpp  HandleSave.hpp  players.json
server/Socket/TCP/: Parser.hpp  TCPConnexion.cpp  TCPConnexion.hpp  TCPRequest.hpp  TCPServer.cpp  TCPServer.hpp  TCPSocket.cpp
server/Socket/UDP/: Client.cpp  UDPClient.cpp  UDPServer.cpp  UDPServer.hpp  UDPSocket.hpp  a.out  client  server
(+15 files in other folders)
